--- a/config/config.json
+++ b/config/config.json
@@ -5,7 +5,7 @@
     "database": "PairProject",
     "host": "127.0.0.1",
     "use_env_variable": "DATABASE_URL",
-    "dialect": "postgres"
+    "dialect": { "dialect": "postgres" }
   },
   "test": {
     "username": "root",
@@ -20,6 +20,6 @@
     "database": "deb29jtfu60e20",
     "host": "ec2-54-83-202-132.compute-1.amazonaws.com",
     "use_env_variable": "DATABASE_URL",
-    "dialect": "postgres"
+    "dialect": { "dialect": "postgres" }
   }
 }
